--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -166,7 +166,7 @@
                       <ul>
                         <li><a href="https://about.uq.edu.au/university-profile" data-gtm-label="About > Introducing UQ">Introducing UQ</a></li>
                         <li><a href="https://about.uq.edu.au/strategic-plan" data-gtm-label="About > Vision, values and strategy">Vision, values and strategy</a></li>
-                        <li><a href="https://teaching-learning.uq.edu.au" data-gtm-label="About > Teaching and learning">Teaching and learning</a></li>
+                        <li><a href="https://about.uq.edu.au/learning-teaching-student-experience" data-gtm-label="About > Learning, teaching and student experience">Learning, teaching and student experience</a></li>
                         <li><a href="https://about.uq.edu.au/initiatives" data-gtm-label="About > Strategic initiatives and projects">Strategic initiatives and projects</a></li>
                         <li><a href="https://about.uq.edu.au/governance-and-organisational-structure" data-gtm-label="About > Governance and organisational structure">Governance and organisational structure</a></li>
                         <li><a href="https://policies.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
@@ -189,8 +189,8 @@
                     <div class="megamenu__heading">Working at UQ</div>
                     <div class="megamenu__menu">
                       <ul>
-                        <li><a href="https://careers.uq.edu.au" data-gtm-label="About > Careers at UQ">Careers at UQ</a></li>
-                        <li><a href="https://careers.uq.edu.au/search-jobs" data-gtm-label="About > Jobs search">Jobs search</a></li>
+                        <li><a href="https://about.uq.edu.au/careers" data-gtm-label="About > Careers at UQ">Careers at UQ</a></li>
+                        <li><a href="https://about.uq.edu.au/careers" data-gtm-label="About > Jobs search">Jobs search</a></li>
                       </ul>
                     </div>
                   </div>
@@ -344,7 +344,7 @@
             <ul>
               <li><a href="https://about.uq.edu.au/university-profile" data-gtm-label="About > Introducing UQ">Introducing UQ</a></li>
               <li><a href="https://about.uq.edu.au/strategic-plan" data-gtm-label="About > Vision, values and strategy">Vision, values and strategy</a></li>
-              <li><a href="https://teaching-learning.uq.edu.au" data-gtm-label="About > Teaching and learning">Teaching and learning</a></li>
+              <li><a href="https://about.uq.edu.au/learning-teaching-student-experience" data-gtm-label="About > Learning, teaching and student experience">Learning, teaching and student experience</a></li>
               <li><a href="https://about.uq.edu.au/initiatives" data-gtm-label="About > Strategic initiatives and projects">Strategic initiatives and projects</a></li>
               <li><a href="https://about.uq.edu.au/governance-and-organisational-structure" data-gtm-label="About > Governance and organisational structure">Governance and organisational structure</a></li>
               <li><a href="https://policies.uq.edu.au" data-gtm-label="About > Policies and procedures">Policies and procedures</a></li>
@@ -363,8 +363,8 @@
           <li>
             <a href="#" class="global-mobile-nav__audience-link slide-menu__control">Working at UQ</a>
             <ul>
-              <li><a href="https://careers.uq.edu.au" data-gtm-label="About > Careers at UQ">Careers at UQ</a></li>
-              <li><a href="https://careers.uq.edu.au/search-jobs" data-gtm-label="About > Jobs search">Jobs search</a></li>
+              <li><a href="https://about.uq.edu.au/careers" data-gtm-label="About > Careers at UQ">Careers at UQ</a></li>
+              <li><a href="https://about.uq.edu.au/careers" data-gtm-label="About > Jobs search">Jobs search</a></li>
             </ul>
           </li>
         </ul>
