--- a/packages/storybook-html/stories/components/footer/footer.html
+++ b/packages/storybook-html/stories/components/footer/footer.html
@@ -71,7 +71,7 @@
               <a href="https://web.library.uq.edu.au/study-and-learning-support" class="uq-footer__navigation-link">Study and learning support</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://web.library.uq.edu.au/library-services" class="uq-footer__navigation-link">Research and publish</a>
+              <a href="https://web.library.uq.edu.au/research-and-publish" class="uq-footer__navigation-link">Research and publish</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://web.library.uq.edu.au/visit" class="uq-footer__navigation-link">Visit</a>
@@ -168,7 +168,7 @@
               <a href="https://web.library.uq.edu.au/study-and-learning-support" class="uq-footer__navigation-link">Study and learning support</a>
             </li>
             <li class="uq-footer__navigation-item">
-              <a href="https://web.library.uq.edu.au/library-services" class="uq-footer__navigation-link">Research and publish</a>
+              <a href="https://web.library.uq.edu.au/research-and-publish" class="uq-footer__navigation-link">Research and publish</a>
             </li>
             <li class="uq-footer__navigation-item">
               <a href="https://web.library.uq.edu.au/visit" class="uq-footer__navigation-link">Visit</a>
