--- a/packages/layout/src/scss/_container.scss
+++ b/packages/layout/src/scss/_container.scss
@@ -7,7 +7,7 @@
   padding-right: var(--layout-gap);
   margin-left: auto;
   margin-right: auto;
-  overflow-x: clip;
+  overflow-x: clip; /* Prevent long URLs from breaking container */
 }
 
 .uq-container--flex {
