Header and Footer updates (#606)
* Updated Links

* update footer terms location

* Linting update

* updated Research link

* updated legal link

--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -231,12 +231,6 @@
   /* FOOTER */
   &__footer {
     grid-area: FooterTerms;
-
-    @media #{core.$screen-xl-up} {
-      & :last-child {
-        justify-content: flex-end;
-      }
-    }
   }
 
   &__footer-list {
@@ -461,9 +455,10 @@
     }
     @media #{core.$screen-xl-up} {
       grid-template-areas:
-        "FooterNavigation FooterNavigation FooterNavigation FooterNavigation FooterNavigation"
-        "FooterSocial FooterSocial FooterSocial FooterSocial FooterSocial"
-        "FooterOrg FooterOrg FooterOrg FooterTerms FooterTerms";
+        "FooterNavigation"
+        "FooterSocial"
+        "FooterOrg"
+        "FooterTerms";
       row-gap: core.$space-xl;
       padding: core.$space-xl core.$space-m core.$space-xxl;
     }
