fix: add new grey-925 color. update doco to reflect

--- a/packages/core/src/scss/_partials/_colour-constants.scss
+++ b/packages/core/src/scss/_partials/_colour-constants.scss
@@ -40,6 +40,7 @@ $grey-600: #8c8a8d;
 $grey-700: #757377;
 $grey-800: #5e5b60;
 $grey-900: #3b383e;
+$grey-925: #302c33;
 
 // Error
 $error-50: #fbeaea;
