--- a/packages/storybook-html/stories/components/core/_colour.scss
+++ b/packages/storybook-html/stories/components/core/_colour.scss
@@ -180,6 +180,11 @@
   color: core.$white;
 }
 
+.uqds-colour--grey-925 {
+  background-color: core.$grey-925;
+  color: core.$white;
+}
+
 /* Error */
 .uqds-colour--error-50 {
   background-color: core.$error-50;
