--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -31,6 +31,19 @@
     box-sizing: border-box;
   }
 
+  & .uq-icon {
+    width: 24px;
+    height: 24px;
+    margin-block: -4px !important;
+
+    &::before {
+      width: 24px;
+      height: 24px;
+      margin: 0;
+      filter: icon.$icon-light-filter;
+    }
+  }
+
   &:hover {
     background-color: core.$white;
     border-color: core.$purple-500;
@@ -47,93 +60,75 @@
     outline-offset: 0;
   }
 
-  & .button--reverse {
+  &.uq-button--reverse {
     background-color: core.$white;
     border-color: core.$white;
     color: core.$purple-500;
 
+    & .uq-icon::before {
+      filter: icon.$icon-primary-filter;
+    }
+
     &:hover {
       background-color: transparent;
       color: core.$white;
-    }
-  }
 
-  & .uq-icon {
-    width: 24px;
-    height: 24px;
-    margin-block: -4px !important;
-
-    &::before {
-      width: 24px;
-      height: 24px;
-      margin: 0;
-      filter: icon.$icon-light-filter;
-    }
-  }
-}
-
-.uq-button--secondary {
-  background-color: transparent;
-  border-color: core.$purple-500;
-  color: core.$purple-500;
-
-  &:hover,
-  &:focus {
-    background-color: core.$purple-500;
-    border-color: core.$purple-500;
-    color: core.$white;
-  }
-
-  & .button--reverse {
-    background-color: transparent;
-    border-color: core.$white;
-    color: core.$white;
-
-    &:hover {
-      background-color: core.$white;
-      color: core.$purple-500;
-    }
-  }
-}
-
-.uq-button--tertiary {
-  background-color: transparent;
-  border-color: transparent;
-  color: core.$purple-500;
-  text-decoration: underline;
-
-  &:hover,
-  &:focus {
-    background-color: core.$purple-500;
-    border-color: core.$purple-500;
-    color: core.$white;
-  }
-
-  & .button--reverse {
-    color: core.$white;
-
-    &:hover {
-      background-color: core.$white;
-      border-color: core.$white;
-      color: core.$purple-500;
+      & .uq-icon::before {
+        filter: icon.$icon-light-filter;
+      }
     }
   }
 }
 
 .uq-button--secondary,
 .uq-button--tertiary {
+  background-color: transparent;
+  border-color: core.$purple-500;
+  color: core.$purple-500;
+
   & .uq-icon::before {
     filter: icon.$icon-primary-filter;
   }
 
-  &:hover,
-  &:focus {
+  &:hover {
     background-color: core.$purple-500;
     border-color: core.$purple-500;
     color: core.$white;
 
     & .uq-icon::before {
       filter: icon.$icon-light-filter;
+    }
+  }
+
+  &.uq-button--reverse {
+    background-color: transparent;
+    border-color: core.$white;
+    color: core.$white;
+
+    & .uq-icon::before {
+      filter: icon.$icon-light-filter;
+    }
+
+    &:hover {
+      background-color: core.$white;
+      color: core.$purple-500;
+
+      & .uq-icon::before {
+        filter: icon.$icon-primary-filter;
+      }
+    }
+  }
+}
+
+.uq-button--tertiary {
+  border-color: transparent;
+  text-decoration: underline;
+
+  &.uq-button--reverse {
+    border-color: transparent;
+
+    &:hover {
+      border-color: core.$white;
     }
   }
 }
