fix: add tiktok icon to footer

--- a/packages/storybook-html/stories/components/footer/footer.html
+++ b/packages/storybook-html/stories/components/footer/footer.html
@@ -206,6 +206,7 @@
           <li class="uq-footer__footer-item"><a href="https://x.com/uq_news" class="uq-footer__meta-icons--twitter uq-footer__meta-icons" aria-label="Follow us on X" data-gtm-label="Follow us on X"></a></li>
           <li class="uq-footer__footer-item"><a href="https://www.youtube.com/user/universityqueensland" class="uq-footer__meta-icons--youtube uq-footer__meta-icons" aria-label="Follow us on Youtube" data-gtm-label="Follow us on Youtube"></a></li>
           <li class="uq-footer__footer-item"><a href="https://instagram.com/uniofqld" class="uq-footer__meta-icons--instagram uq-footer__meta-icons" aria-label="Follow us on Instagram" data-gtm-label="Follow us on Instagram"></a></li>
+          <li class="uq-footer__footer-item"><a href="https://www.tiktok.com/@uniofqld" class="uq-footer__meta-icons--tiktok uq-footer__meta-icons" aria-label="Follow us on TikTok" data-gtm-label="Follow us on TikTok"></a></li>
         </ul>
       </nav> 
       <div class="uq-footer__contact-item uq-footer__contact-login"><a href="#" class="uq-footer__link" rel="nofollow">Web login</a></div>
