--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -383,6 +383,20 @@
         #d4c8de
       ));
     }
+
+    /* TikTok icon */
+    &--tiktok::before {
+      background-image: url(icon-constants.get-icon(
+        "social--social-tiktok-circle",
+        core.$white
+      ));
+    }
+    &--tiktok:hover::before {
+      background-image: url(icon-constants.get-icon(
+        "social--social-tiktok-circle",
+        #d4c8de
+      ));
+    }
   }
 
   &--desktop {
