--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -179,14 +179,10 @@
       color: inherit;
       text-decoration: underline;
 
-      &:link,
-      &:visited,
-      &:active {
-        text-decoration: underline;
-      }
       &:hover,
       &:focus {
-        text-decoration: none;
+        background-color: core.$white;
+        color: core.$purple-500;
       }
     }
 
