ITSADSSD-61782: alert link fix (#619)
* fix: remove link color override for --warning variant

* fix: alert link styling to match new requirements

--- a/packages/alert/src/scss/_component.scss
+++ b/packages/alert/src/scss/_component.scss
@@ -179,14 +179,10 @@
       color: inherit;
       text-decoration: underline;
 
-      &:link,
-      &:visited,
-      &:active {
-        text-decoration: underline;
-      }
       &:hover,
       &:focus {
-        text-decoration: none;
+        background-color: core.$white;
+        color: core.$purple-500;
       }
     }
 
@@ -232,10 +228,6 @@
       color: core.$grey-900;
 
       .uq-alert__title {
-        color: core.$grey-900;
-      }
-
-      a {
         color: core.$grey-900;
       }
     }
