fixed body weight reference

--- a/packages/body/src/scss/_component.scss
+++ b/packages/body/src/scss/_component.scss
@@ -7,7 +7,7 @@ $use-encapsulation: false !default;
   color: core.$grey-900;
   font-size: 1rem;
   font-family: core.$font-body;
-  font-weight: core.$font-weight-medium;;
+  font-weight: core.$font-weight-normal;
   line-height: core.$line-height;
 }
 
