fix: remove 300 weight fonts, updated to 400 weight (#594)
* fix: remove 300 weight fonts, updated to 400 weight

* fix: updated font weights

* fixed body weight reference

--- a/packages/storybook-html/stories/components/core/_typography.scss
+++ b/packages/storybook-html/stories/components/core/_typography.scss
@@ -21,12 +21,8 @@
     font-style: italic;
   }
 
-  &--300 {
-    font-weight: 300;
-  }
-
   &--500 {
-    font-weight: 500;
+    font-weight: core.$font-weight-medium;
   }
 
   &--lead {
