--- a/packages/footer-legacy/src/scss/_component.scss
+++ b/packages/footer-legacy/src/scss/_component.scss
@@ -8,7 +8,7 @@
   color: $site-footer-color;
   font-family: core.$font-body;
   font-size: $site-footer-font-size;
-  font-weight: core.$font-weight-thin;
+  font-weight: 300;
   line-height: core.$line-height;
 
   *,
@@ -19,7 +19,7 @@
 
   a {
     color: $site-footer-link-color;
-    font-weight: 500;
+    font-weight: core.$font-weight-medium;
     text-decoration: none;
 
     &:hover {
