fix: patch merge issues

--- a/packages/button/src/scss/_component.scss
+++ b/packages/button/src/scss/_component.scss
@@ -62,7 +62,7 @@
 
   &.uq-button--reverse {
     background-color: core.$white;
-    border-color: core.$purple-500;
+    border-color: core.$white;
     color: core.$purple-500;
 
     & .uq-icon::before {
