--- a/packages/storybook-html/stories/components/header/header.html
+++ b/packages/storybook-html/stories/components/header/header.html
@@ -14,7 +14,7 @@
           <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://study.uq.edu.au" data-gtm-label="Study">Study</a>
             <div class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
-                <a href="https://study.uq.edu.au" class="megamenu__overview-link" data-gtm-label="Study > Study overview">Study overview</a>
+                <a href="https://study.uq.edu.au" class="megamenu__overview-link" data-gtm-label="Study > Study overview"><span class="megamenu__overview-label">Study overview</span></a>
                 <div class="megamenu__row">
                   <div class="megamenu__column">
                     <div class="megamenu__heading">Study with us</div>
@@ -66,7 +66,7 @@
           <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://research.uq.edu.au"  data-gtm-label="Research">Research</a>
             <div class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
-                <a href="https://research.uq.edu.au" class="megamenu__overview-link" data-gtm-label="Research > Research overview">Research overview</a>
+                <a href="https://research.uq.edu.au" class="megamenu__overview-link" data-gtm-label="Research > Research overview"><span class="megamenu__overview-label">Research overview</span></a>
                 <div class="megamenu__row">
                   <div class="megamenu__column">
                     <div class="megamenu__heading">Our research</div>
@@ -112,7 +112,7 @@
           <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://partners-community.uq.edu.au" data-gtm-label="Partners and community">Partners and community</a>
             <div class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
-                <a href="https://partners-community.uq.edu.au" class="megamenu__overview-link" data-gtm-label="Partners and community > Partners and community overview">Partners and community overview</a>
+                <a href="https://partners-community.uq.edu.au" class="megamenu__overview-link" data-gtm-label="Partners and community > Partners and community overview"><span class="megamenu__overview-label">Partners and community overview</span></a>
                 <div class="megamenu__row">
                   <div class="megamenu__column">
                     <div class="megamenu__heading">Industry partnerships</div>
@@ -158,7 +158,7 @@
           <li class="uq-header__nav-primary-item"><a class="uq-header__nav-primary-link nav-primary-link--has-dropdown" href="https://about.uq.edu.au" data-gtm-label="About">About</a>
             <div class="uq-header__megamenu">
               <div class="uq-header__megamenu-container">
-                <a href="https://about.uq.edu.au" class="megamenu__overview-link" data-gtm-label="About > About overview">About overview</a>
+                <a href="https://about.uq.edu.au" class="megamenu__overview-link" data-gtm-label="About > About overview"><span class="megamenu__overview-label">About overview</span></a>
                 <div class="megamenu__row">
                   <div class="megamenu__column">
                     <div class="megamenu__heading">Our profile</div>
