fix: update link style

--- a/packages/acknowledgement/src/scss/_component.scss
+++ b/packages/acknowledgement/src/scss/_component.scss
@@ -53,7 +53,8 @@
 
     &:hover {
       text-decoration: underline;
-      color: #d4c8de;
+      background-color: core.$white;
+      color: core.$purple-500;
     }
   }
 
