--- a/packages/storybook-html/stories/components/footer/footer.html
+++ b/packages/storybook-html/stories/components/footer/footer.html
@@ -1,7 +1,9 @@
 <footer class="uq-footer" data-gtm-category="Footer">
-  <div  class="uq-footer__reconciliation">
-    <div class="uq-footer__acknowledgement">
-     <span class="uq-footer__acknowledgement-text">UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="uq-footer__link">Reconciliation at UQ</a></span>
+  <div  class="uq-acknowledgement uq-acknowledgement--large">
+    <div class="uq-acknowledgement__content">
+      <div class="uq-acknowledgement__text">
+        UQ acknowledges the Traditional Owners and their custodianship of the lands on which UQ is situated. &mdash; <a href="https://about.uq.edu.au/reconciliation" class="uq-acknowledgement__link">Reconciliation at UQ</a>
+      </div>
     </div>
   </div>
   <div class="uq-footer__container">
