--- a/packages/storybook-html/stories/components/footer/footer.scss
+++ b/packages/storybook-html/stories/components/footer/footer.scss
@@ -1,3 +1,4 @@
 // if accordion is callled after footer it breaks the styles
 @use "@uqds/accordion/src/scss/_component" as *;
+@use "@uqds/acknowledgement/src/scss/_component" as *;
 @use "@uqds/footer/src/scss/_component" as *;
